# beemeteo

./: .gitignore  Makefile  README.md  config.sample.json  import.py  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: main.yml
beemeteo/: __main__.py  hbase.py
beemeteo/darksky/: __init__.py
beemeteo/soda/: __init__.py
beemeteo/sources/: __init__.py
beemeteo/sources/cams/: __init__.py
beemeteo/sources/darksky/: __init__.py
beemeteo/sources/meteogalicia/: __init__.py
beemeteo/sources/soda/: __init__.py
beemeteo/stations/: README.md  __main__.py  postal_code.py  stations.py
src/beemeteo/: __main__.py  utils.py
src/beemeteo/sources/: __init__.py
src/beemeteo/sources/appleweather/: __init__.py  appleweather.py
src/beemeteo/sources/cams/: __init__.py
src/beemeteo/sources/darksky/: __init__.py
src/beemeteo/sources/meteogalicia/: __init__.py
src/beemeteo/stations/: README.md  __main__.py  coordinates.py  postalCode_geoLoc  postal_code.py
tests/: test_appleweather.py  test_beemeteo.py  test_cams.py  test_darksky.py  test_meteogalicia.py  test_soda.py
tests/b2back/: cams.csv  darksky.csv  meteogalicia.csv
