[tool.poetry]
name = "beemeteo"
version = "0.1.0"
description = "Python library to download weather data."
authors = ["Beedata Analytics <info@beedataanalytics.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
python-forecastio = "^1.4.0"
pytz = "^2021.3"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
