[metadata]
# replace with your username:
name = beemeteo
version = 0.2.0
author = Eloi Gabaldon, Xavi Duran
author_email = eloigabal@cimne.upc.edu, xduran@beedataanalytics.com
description = API to access the weather data comming from different sources (Darksky, CAMS and meteogalicia)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BeeGroup-cimne/beemeteo
project_urls =
    Bug Tracker = https://github.com/BeeGroup-cimne/beemeteo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: EUPL
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    python-dateutil
    pytz
    requests
    pandas
    happybase
    python-forecastio
    timezonefinder

[options.packages.find]
where = src
